# rustql

./: .gitignore  AGENTS.md  CLAUDE.md  COVERAGE_IMPROVEMENT_PLAN.md  CROSS_PLATFORM_FIXES.md  Cargo.toml  GEMINI.md  Makefile  README.md  coverage_analysis.py  coverage_report.json  coverage_report.txt
.github/workflows/: ci.yml
.moth/: .current
.moth/doing/: ax0sk-crit-wire_vdbe_cursor_ops_to_b_tree.md  dmouz-high-translate_mutex_c_and_mutex_implementations.md  dzaoz-med-implement_missing_pragmas_default_cache_size_case_sensitive_like_etc.md  dzaqm-med-implement_op_endcoroutine.md  e421d-med-vdbe_validate_order_by_column_index_range.md  e4mac-high-define_core_error_types_and_result_aliases.md  edjud-high-implement_op_savepoint.md  eigtx-high-fix_insert_5_5_no_such_column_error_in_insert_statements.md  epki6-low-translate_fts3_remaining_files.md  f4idd-high-vdbe_validate_table_existence_in_openread_openwrite.md  (+26 more)
coverage/: cobertura.xml
docs/: architecture.md  btree.md  differences.md  opcodes.md  vdbe.md
examples/: test_insert.rs  test_ordering.rs  test_pcache.rs  test_sqlite_master.rs
scripts/: install-hooks.sh  pre-commit  run_sqlite_test.tcl
sqlite3/: manifest
src/: error.rs  lib.rs  random.rs  rtree.rs  shared_cache.rs  tcl_ext.rs  types.rs  utf.rs
tests/: basic_tcl.test  coalesce_debug.rs  compat_debug.rs  connection_lifecycle.rs  fts3_persist_test.rs  index_selection.rs  multi_stmt_debug.rs  run_tcl_test.tcl  select1_debug.rs  select1_fixes.rs  select2_debug.rs  shared_cache.rs  sqlite_compat_test.rs  update_or_replace.rs  where_debug.rs
(+464 files in other folders)
