[package]
name = "rustql"
version = "0.1.0"
edition = "2021"
description = "SQLite3 database engine rewritten in Rust"
license = "MIT OR Apache-2.0"

[features]
default = ["fts5", "rtree", "session"]
fts3 = []
fts5 = []
rtree = []
session = []
json = []

[dependencies]
bitflags = "2"
lazy_static = "1.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
] }

[dev-dependencies]
